# procedural-stories

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  bot.py  chat.ipynb  cli.py  config.py  docker-compose.yaml  generate_world.py  graph_locations.py  hf.py  install.sh  langchain-mlx.py  llamam3.py  ontology.py  ontology_manager.py  populated_story.owl  pyproject.toml  requirements.txt  rrr.py  start.sh  story.json  story.py  story_ontology.owl  story_ontology2.owl  story_ontology3.owl  story_ontology3.rdf  story_poptest.rdf  story_poptest70b.rdf  story_poptest70b_fantasy.rdf  test.py  visualize_graph.ipynb  visualize_graph.py  world_generation.ipynb
analysis/: anonymize_transcripts.py  reorder_data.py  visualize_results.ipynb
cogs/: chat_cog.py  util_cog.py
data/: processed_results.csv  raw_results.csv
data/1/: transcript_A.txt  transcript_B.txt
data/10/: transcript_A.txt  transcript_B.txt
data/2/: transcript_A.txt  transcript_B.txt
data/3/: transcript_A.txt  transcript_B.txt
data/4/: transcript_A.txt  transcript_B.txt
data/5/: transcript_A.txt  transcript_B.txt
data/6/: transcript_A.txt  transcript_B.txt
data/7/: transcript_A.txt  transcript_B.txt
data/8/: transcript_A.txt  transcript_B.txt
data/9/: transcript_A.txt  transcript_B.txt
generator/: models.py  nlp.py  ontology_manager.py  story.py  trivial.py  utils.py  world_generator.py
generator/parsers/: __init__.py  characters.py  expanded_location.py  items.py  locations.py  outline.py
generator/prompts/: world.py
generator/story/: converse.py  prompts.py
generator/story/nlp/: nlp.py  prompts.py
generator/trivial/: converse.py  prompts.py
generator/utils/: serializers.py
ontology/: story_world_ontology.rdf
webapp/static/js/: main.js
webapp/templates/: index.html
worlds/: story_world_fantasy_used_for_testing.rdf  story_world_zombies.rdf
