[tool.poetry]
name = "procedural-stories"
version = "0.1.0"
description = "Generating interactive fictions with LLMs"
authors = ["Florian Rieder <florian.rieder@unil.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
langchain-openai = "^0.1.22"
langchain-huggingface = "^0.0.3"
transformers = "^4.44.2"
mlx-lm = "^0.17.1"
fastapi = "^0.112.2"
jinja2 = "^3.1.4"
uvicorn = "^0.30.6"
websockets = "^13.0"
chromadb = "^0.5.5"
discord = "^2.3.2"
matplotlib = "^3.9.2"
networkx = "^3.3"
owlready2 = "^0.46"
rdflib = "^7.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
