[tool.poetry]
name = "procedural stories"
version = "0.1.0"
description = ""
authors = ["Florian Rieder <florian.rieder@unil.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langchain-community = "^0.3.7"
langchain-fireworks = "^0.2.5"
mlx-lm = "^0.19.3"
owlready2 = "^0.47"
discord = "^2.3.2"
ipykernel = "^6.29.5"
levenshtein = "^0.26.1"
python-dotenv = "^1.0.1"
networkx = "^3.4.2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
langchain-ollama = "^0.2.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
pyperclip = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
